# quine-mccluskey

./: .gitattributes  .gitignore  CMakeLists.txt  INSTALL  LICENSE  Makefile  README.md  VERSION  qm.py
debug/: gdbinit  run  sizes  test  test2
include/: bit.h  cover.h  cover.th  cover_element.h  cover_element.th  cover_list.h  cover_list.th  cube.h  qm.h
pylibs/: qm.py  qm_verify.py
src/: cover.cc  cover_list.cc  main.cc  qm.cc
